--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@ title: Home
 
 <!-- Featured
 ================================================== -->
+
+<!-- Old Code -->
+{% comment %}
 <section class="featured-posts">
     <div class="section-title">
         <h2><span>Featured</span></h2>
@@ -18,6 +21,27 @@ title: Home
         {% if post.featured == true %}
 
             {% include featuredbox.html %}
+
+        {% endif %}
+
+    {% endfor %}
+
+    </div>
+</section>
+{% endcomment %}
+
+<!-- Changed code -->
+<section class="recent-posts">
+    <div class="section-title">
+        <h2><span>Featured</span></h2>
+    </div>
+    <div class="row listrecent">
+
+    {% for post in site.posts %}
+
+        {% if post.featured == true %}
+
+            {% include funfeaturedbox.html %}
 
         {% endif %}
 
@@ -42,7 +66,7 @@ title: Home
 
         {% for post in paginator.posts %}
 
-        {% include postbox.html %}
+        {% include funstorybox.html %}
 
         {% endfor %}
 
