--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ title: Home
 ================================================== -->
 <section class="recent-posts">
 
-    <div class="section-title">
+    <div class="section-title pt-2">
 
         <h2><span>All Stories</span></h2>
 
